--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -19,8 +19,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            zadam/trilium
-            ghcr.io/zadam/trilium
+            leesonaa/test
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}-latest
@@ -34,20 +33,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Log in to GitHub Docker Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Create server-package.json
         run: cat package.json | grep -v electron > server-package.json
       - name: Build and Push
         uses: docker/build-push-action@v2.7.0
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+          platforms: linux/amd64,linux/arm64
           push: true
-          cache-from: type=registry,ref=zadam/trilium:buildcache
-          cache-to: type=registry,ref=zadam/trilium:buildcache,mode=max
           tags: ${{ steps.meta.outputs.tags }}
