--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,7 +1,6 @@
 name: Publish Docker image
 on:
-  push:
-    tags: [v*]
+  workflow_dispatch:
 jobs:
   push_to_registries:
     name: Push Docker image to multiple registries
