--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -30,8 +30,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${ secrets.DOCKER_USERNAME }
+          password: ${ secrets.DOCKER_PASSWORD }
       - name: Build and Push
         uses: docker/build-push-action@v2.7.0
         with:
