--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -28,10 +28,10 @@ jobs:
         with:
           install: true
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
-          username: ${ secrets.DOCKER_USERNAME }
-          password: ${ secrets.DOCKER_PASSWORD }
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and Push
         uses: docker/build-push-action@v2.7.0
         with:
