--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -18,6 +18,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
+        name: show workspace
+          echo ${{ github.workspace }}
+      -
         name: Build and push
         uses: docker/build-push-action@v5
         with:
