--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: show workspace
         run: |
           echo ${{ github.workspace }}
-          cd ..
+          cd /home
           ls -lah
       -
         name: Build and push
