--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -9,6 +9,7 @@ jobs:
         run: |
           git clone  https://github.com/leesonaa/mytest.git
           cd mytest
+          pwd
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -21,11 +22,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: show workspace
-        run: |
-          echo ${{ github.workspace }}
-          cd /home
-          ls -lah
       -
         name: Build and push
         uses: docker/build-push-action@v5
