--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -5,25 +5,22 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: clone repo
-        run: |
-          git clone  https://github.com/leesonaa/mytest.git
-          cd mytest
-          pwd
-      -
-        name: Set up QEMU
+      - name: Checkout
+        uses: actions/checkout@main
+        
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+        
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
+        
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Build and push
+          
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
