--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@main
       - name: downloads remote file
         run: |
-          curl -L https://github.com/Nriver/trilium-translation/releases/latest/download/trilium-cn-linux-x64-server.zip \
+          wget https://github.com/Nriver/trilium-translation/releases/latest/download/trilium-cn-linux-x64-server.zip \
           && uzip trilium-cn-linux-x64-server.zip \
           && cd trilium-linux-x64-server \
           && rm -rf node node_modules
