--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: downloads remote file
         run: |
           wget https://github.com/Nriver/trilium-translation/releases/latest/download/trilium-cn-linux-x64-server.zip \
-          && uzip trilium-cn-linux-x64-server.zip \
+          && unzip trilium-cn-linux-x64-server.zip \
           && cd trilium-linux-x64-server \
           && rm -rf node node_modules
       
