--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -16,6 +16,7 @@ jobs:
         run: |
           wget https://github.com/Nriver/trilium-translation/releases/latest/download/trilium-cn-linux-x64-server.zip \
           && unzip trilium-cn-linux-x64-server.zip \
+          && rm -rf trilium-cn-linux-x64-server.zip \
           && cd trilium-linux-x64-server \
           && rm -rf node node_modules
       - name: Check for changes
