--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -21,7 +21,8 @@ jobs:
             && unzip trilium-cn-linux-x64-server.zip \
             && rm -rf trilium-cn-linux-x64-server.zip \
             && cd trilium-linux-x64-server \
-            && rm -rf node node_modules
+            && rm -rf node node_modules \
+            || true
           fi
       - name: Check for changes
         run: |
