--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -22,6 +22,7 @@ jobs:
             && rm -rf trilium-cn-linux-x64-server.zip \
             && cd trilium-linux-x64-server \
             && rm -rf node node_modules \
+            || true
           fi
       - name: Check for changes
         run: |
