--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,12 +17,11 @@ jobs:
           if [ -d "trilium-linux-x64-server" ]; then
             rm -rf trilium-linux-x64-server
           else          
-            wget https://github.com/Nriver/trilium-translation/releases/latest/download/trilium-cn-linux-x64-server.zip \
-            && unzip trilium-cn-linux-x64-server.zip \
-            && rm -rf trilium-cn-linux-x64-server.zip \
-            && cd trilium-linux-x64-server \
-            && rm -rf node node_modules \
-            || true
+            wget https://github.com/Nriver/trilium-translation/releases/latest/download/trilium-cn-linux-x64-server.zip 
+            unzip trilium-cn-linux-x64-server.zip 
+            rm -rf trilium-cn-linux-x64-server.zip 
+            cd trilium-linux-x64-server 
+            rm -rf node node_modules 
           fi
       - name: Check for changes
         run: |
