--- a/h5-apache-config.conf
+++ b/h5-apache-config.conf
@@ -1,17 +1,12 @@
-<Directory /var/www/html/>
-    Options Indexes FollowSymLinks
-    AllowOverride All
-    Require all granted
-</Directory>
+<VirtualHost *:80>
+    DocumentRoot /var/www/html/h5/public
 
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /
+    <Directory /var/www/html/h5/public>
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
+    </Directory>
 
-    # Your existing rewrite rules here
-
-    # Redirect to index.php for all other requests
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php/$1 [L]
-</IfModule>
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
